Preserve white space newline formatting in photo story. Output correctly in show photo page. Use white-space style on tag.

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -20,3 +20,7 @@
   margin: 0 auto;
   max-width: 1095px;
 }
+
+.story-output {
+  white-space: pre-wrap;
+}
